@@ -24,6 +24,7 @@ to be included, please mail to `the Google group
 * Satchmo: http://www.satchmoproject.com/docs/svn/
 * PyEphem: http://rhodesmill.org/pyephem/
 * Paste: http://pythonpaste.org/script/
+* Director: http://packages.python.org/director/
 * Calibre: http://calibre.kovidgoyal.net/user_manual/
 * PyUblas: http://tiker.net/doc/pyublas/
 * Py on Windows: http://timgolden.me.uk/python-on-windows/
