@@ -11,12 +11,12 @@ include ez_setup.py
 include sphinx-build.py
 include sphinx-quickstart.py
 
-recursive-include sphinx/texinputs *.*
+recursive-include sphinx/texinputs *
 recursive-include sphinx/templates *.html *.xml
-recursive-include sphinx/static *.*
-recursive-include sphinx/locale *.*
-recursive-include tests *.*
-recursive-include utils *.*
+recursive-include sphinx/static *
+recursive-include sphinx/locale *
+recursive-include tests *
+recursive-include utils *
 
-recursive-include doc *.*
+recursive-include doc *
 prune doc/_build
