@@ -2,5 +2,5 @@ Sphinx TODO
 ===========
 
 All todo items are now tracked as issues in the Sphinx issue tracker at
-<http://code.google.com/p/sphinx/issues/list>.
+<http://www.bitbucket.org/birkenfeld/sphinx/issues/>.
 
