@@ -288,7 +288,7 @@ explained by an example::
 
       Format the exception with a traceback.
    
-      :param object: exception type
+      :param etype: exception type
       :param value: exception value
       :param tb: traceback object
       :param limit: maximum number of stack frames to show
@@ -302,7 +302,7 @@ This will render like this:
 
       Format the exception with a traceback.
 
-      :param object: exception type
+      :param etype: exception type
       :param value: exception value
       :param tb: traceback object
       :param limit: maximum number of stack frames to show
