@@ -39,8 +39,10 @@ Options: -b <builder> -- builder to use; default is html
          -c <path> -- path where configuration file (conf.py) is located
                       (default: same as sourcedir)
          -D <setting=value> -- override a setting in configuration
+         -A <name=value>    -- pass a value into the templates, for HTML builder
          -N        -- do not do colored output
          -q        -- no output on stdout, just warnings on stderr
+         -Q        -- no output at all, not even warnings
          -P        -- run Pdb on exception
          -g <path> -- create autogenerated files
 Modi:
@@ -60,7 +62,7 @@ def main(argv=sys.argv):
         nocolor()
 
     try:
-        opts, args = getopt.getopt(argv[1:], 'ab:d:c:D:g:NEqP')
+        opts, args = getopt.getopt(argv[1:], 'ab:d:c:D:A:g:NEqP')
         srcdir = confdir = path.abspath(args[0])
         if not path.isdir(srcdir):
             print >>sys.stderr, 'Error: Cannot find source directory.'
@@ -90,7 +92,9 @@ def main(argv=sys.argv):
     buildername = all_files = None
     freshenv = use_pdb = False
     status = sys.stdout
+    warning = sys.stderr
     confoverrides = {}
+    htmlcontext = {}
     doctreedir = path.join(outdir, '.doctrees')
     for opt, val in opts:
         
@@ -120,24 +124,45 @@ def main(argv=sys.argv):
                       'Error: Configuration directory doesn\'t contain conf.py file.'
                 return 1
         elif opt == '-D':
-            key, val = val.split('=')
+            try:
+                key, val = val.split('=')
+            except ValueError:
+                print >>sys.stderr, \
+                      'Error: -D option argument must be in the form name=value.'
+                return 1
             try:
                 val = int(val)
             except ValueError:
                 pass
             confoverrides[key] = val
+        elif opt == '-A':
+            try:
+                key, val = val.split('=')
+            except ValueError:
+                print >>sys.stderr, \
+                      'Error: -A option argument must be in the form name=value.'
+                return 1
+            try:
+                val = int(val)
+            except ValueError:
+                pass
+            htmlcontext[key] = val
         elif opt == '-N':
             nocolor()
         elif opt == '-E':
             freshenv = True
         elif opt == '-q':
             status = StringIO()
+        elif opt == '-Q':
+            status = StringIO()
+            warning = StringIO()
         elif opt == '-P':
             use_pdb = True
+    confoverrides['html_context'] = htmlcontext
 
     try:
         app = Sphinx(srcdir, confdir, outdir, doctreedir, buildername,
-                     confoverrides, status, sys.stderr, freshenv)
+                     confoverrides, status, warning, freshenv)
         app.build(all_files, filenames)
     except KeyboardInterrupt:
         if use_pdb:
