@@ -1,0 +1,4 @@
+{% extends "!layout.html" %}
+{% block extrahead %}
+<meta name="hc" content="{{ hckey }}" />
+{% endblock %}
